--- a/css/stylesheet-customizations.scss
+++ b/css/stylesheet-customizations.scss
@@ -7,7 +7,7 @@
 
 // Customize the background color
 body {
-  background-color: #fcdee7;
+  background-color: #fcf6f1;
 }
 
 // Customize the menubar color
@@ -17,6 +17,6 @@ body {
 
 // Customize the home page icon colors
 .icon-color {
-  color: #e2b8f9;
+  color: #fcdee7;
 }
 
