--- a/_layouts/project.html
+++ b/_layouts/project.html
@@ -3,6 +3,8 @@ layout: projects
 ---
 
 <div style="margin-top: 20px; margin-bottom: 20px" class="ui text container">
- <h1>{{ page.title }}</h1>
+ <div align="middle">
+  <h1>{{ page.title }}</h1>
+ </div>
  {{ content }}
 </div>
