--- a/css/stylesheet-customizations.scss
+++ b/css/stylesheet-customizations.scss
@@ -7,12 +7,12 @@
 
 // Customize the background color
 body {
-  background-color: #fcf6f1;
+  background-color: #ffffff;
 }
 
 // Customize the menubar color
 .ui.menu {
-  background: #ffffff;
+  background: #c2dbff;
 }
 
 // Customize the home page icon colors
